ch3/greeter-90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: greeter-service
spec:
    hosts:
        - greeter-service.default.svc.cluster.local
    http:
        - route:
              - destination:
                    host: greeter-service.default.svc.cluster.local
                    port:
                        number: 3000
                    subset: v1
                weight: 90
              - destination:
                    host: greeter-service.default.svc.cluster.local
                    port:
                        number: 3000
                    subset: v2
                weight: 10
