ch3/greeter-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: greeter-service
spec:
    host: greeter-service.default.svc.cluster.local
    subsets:
        - name: v1
          labels:
            version: v1
        - name: v2
          labels:
            version: v2
    trafficPolicy:
        tls:
            mode: ISTIO_MUTUAL
