ch3/movieweb-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: movieweb
spec:
    hosts:
        - api.themoviedb.org
    ports:
        - number: 443
          name: https
          protocol: HTTPS
    resolution: DNS
    location: MESH_EXTERNAL
