ch3/movieweb-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: movieweb
spec:
    hosts:
        - 'movieweb.dev'
    gateways:
        - gateway
    http:
      - route:
        - destination:
            host: movieweb.default.svc.cluster.local
            port:
                number: 3000
